--- a/html/login.html
+++ b/html/login.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./../icono.png">
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
         <h1 class="text-2xl font-bold mb-4 text-center">Iniciar Sesión</h1>
         <form id="loginForm">
@@ -18,10 +19,10 @@
                 <label for="password" class="block text-sm font-bold mb-2">Contraseña:</label>
                 <input type="password" id="password" name="password" required class="w-full p-2 border rounded">
             </div>
-            <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded">Iniciar Sesión</button>
+            <button type="submit" class="w-full bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 text-white p-2 rounded">Iniciar Sesión</button>
         </form>
-        <p class="mt-4 text-center">¿No tienes una cuenta? <a href="./../FORMULARIO/index.html" class="text-blue-500">Regístrate</a></p>
+        <p class="mt-4 text-center">¿No tienes una cuenta? <a href="./index.html" class="text-pink-500">Regístrate</a></p>
     </div>
-    <script src="login.js"></script>
+    <script src="./../js/login.js"></script>
 </body>
 </html>
