--- a/html/perfil.html
+++ b/html/perfil.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil de Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./../css/styles.css"> <!-- Enlace al archivo CSS para modo oscuro -->
     <link rel="icon" type="image/x-icon" href="./../icono.png">
-
+    <link rel="stylesheet" href="./../darkmode.css">
 </head>
 <body class="bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 min-h-screen flex items-center justify-center">
+    <div class="absolute top-4 right-4">
+        <button id="darkModeToggle" class="bg-blue-500 text-white px-4 py-2 rounded-full shadow hover:bg-blue-400
+        focus:outline-none focus:ring-2 focus:ring-blue-300">Dark Mode 🌑</button>
+    </div>
     <div class="bg-white rounded-lg shadow-lg p-10 text-center max-w-lg mx-auto">
         <h1 class="text-4xl font-bold mb-6 text-gray-800">Perfil de Usuario</h1>
         <form id="profileForm">
@@ -29,5 +34,6 @@
         <button id="logoutButton" class="mt-4 bg-red-500 text-white px-4 py-2 rounded-full shadow hover:bg-red-400 focus:outline-none focus:ring-2 focus:ring-red-300">Logout</button>
     </div>
     <script src="./../js/perfil.js"></script>
+    <script src="./../js/darkMode.js"></script> <!-- Enlace al archivo JS para modo oscuro -->
 </body>
 </html>
